--- a/style1.css
+++ b/style1.css
@@ -1301,8 +1301,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .footer-links h3,
-.footer-contact h3,
-.footer-newsletter h3 {
+.footer-contact h3 {
   color: white;
   margin-bottom: 20px;
   font-size: 1.3rem;
@@ -1311,8 +1310,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .footer-links h3::after,
-.footer-contact h3::after,
-.footer-newsletter h3::after {
+.footer-contact h3::after {
   content: "";
   position: absolute;
   bottom: 0;
@@ -1382,59 +1380,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   line-height: 1.5;
   font-size: 0.95rem;
   margin: 0;
-}
-
-.footer-newsletter {
-  flex: 1;
-  min-width: 250px;
-}
-
-.footer-newsletter p {
-  color: rgba(255, 255, 255, 0.8);
-  line-height: 1.7;
-  font-size: 0.95rem;
-  margin-bottom: 20px;
-}
-
-.newsletter-form {
-  display: flex;
-  position: relative;
-}
-
-.newsletter-form input {
-  flex: 1;
-  padding: 15px;
-  border: none;
-  border-radius: 30px;
-  font-family: "Montserrat", sans-serif;
-  font-size: 0.95rem;
-  padding-right: 50px;
-}
-
-.newsletter-form input:focus {
-  outline: none;
-}
-
-.newsletter-form button {
-  position: absolute;
-  right: 5px;
-  top: 5px;
-  background-color: var(--azul-logo);
-  color: white;
-  border: none;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  transition: var(--transicion);
-}
-
-.newsletter-form button:hover {
-  background-color: var(--rojo-logo);
-  transform: scale(1.1);
 }
 
 .footer-social {
@@ -2324,8 +2269,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
   .footer-info,
   .footer-links,
-  .footer-contact,
-  .footer-newsletter {
+  .footer-contact {
     max-width: 100%;
   }
 }
