--- a/style.css
+++ b/style.css
@@ -1474,6 +1474,13 @@ img {
     font-size: 2rem;
   }
 
+  .boxeo-contenido .boton-redondeado {
+    display: block;
+    margin: 20px auto 0;
+    text-align: center;
+    max-width: 200px;
+  }
+
   .entrenador-card {
     flex-direction: column;
     max-width: 400px;
@@ -1482,6 +1489,10 @@ img {
   .entrenador-img {
     width: 100%;
     height: 250px;
+  }
+
+  .entrenador-img img {
+    object-position: center 25%; 
   }
 
   .footer-content {
@@ -1980,6 +1991,7 @@ img {
     background-color: white;
     width: 100%;
     height: 100vh;
+    overflow-y: auto;
     text-align: center;
     transition: 0.3s;
     padding-top: 80px;
